2005-02-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/idl.lang: rewritten

2005-02-23  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: small cleanup.

2005-02-12  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/php.lang: added some missing
	items (patch by Rowan Lewis <rowanjl@gmail.com>).

=== gtksourceview 1.1.92 ===

2005-02-07  Paolo Maggi  <paolo@gnome.org> 

	* configure.in: set version to 1.1.92
	
	* NEWS:
	* README: updated

2005-02-07  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/latex.lang: fixed bug #128223 (Latex: \$ 
	and \% are not escaped)

	* gtksourceview/language-specs/python.lang: fixed bug #126589 (Python: 
	Embolden punctuation/operators, numbers)

2005-02-03  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceundomanager.c
	(gtk_source_undo_manager_set_max_undo_levels): do not resize the 
	undo action list if max_undo_levels < 1

=== gtksourceview 1.1.91 ===

2005-01-25  Paolo Maggi  <paolo@gnome.org> 

	* configure.in: set version to 1.1.91
	
	* NEWS:
	* README: updated

2005-01-24  Laurent Sansonetti  <lrz@gnome.org>

	* gtksourceview/gtksourcebuffer.c:
	* gtksourceview/gtksourceiter.c:
	* gtksourceview/gtksourcelanguage.c:
	* gtksourceview/gtksourcelanguagesmanager.c:
	* gtksourceview/gtksourcemarker.c:
	* gtksourceview/gtksourceprintjob.c:
	* gtksourceview/gtksourceregex.c:
	* gtksourceview/gtksourcestylescheme.c:
	* gtksourceview/gtksourcetag.c:
	* gtksourceview/gtksourcetagtable.c:
	* gtksourceview/gtksourceundomanager.c:
	* gtksourceview/gtksourceview.c:
	Added some missing documentation and improved existing one. 

2005-01-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceprintjob.c
	(gtk_source_print_job_class_init): fixed bug #149337 ("font description 
	name" in gtksourceview difficult to translate)

2005-01-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceundomanager.c